# tap-reprise-custom

./: meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
tap_reprise/: client.py  streams.py  tap.py
